# audio_io

./: CHANGELOG.md  CMakeLists.txt  README.md  README_cn.md  package.xml
SenseVoiceGGUF/: README.md  configuration.json  sense-voice-small-fp16.gguf  sense-voice-small-fp32.gguf  sense-voice-small-q3_k.gguf  sense-voice-small-q4_0.gguf  sense-voice-small-q4_1.gguf  sense-voice-small-q4_k.gguf  sense-voice-small-q5_0.gguf  sense-voice-small-q5_k.gguf  sense-voice-small-q6_k.gguf  sense-voice-small-q8_0.gguf
config/: cmd_word.json
include/: hb_audio_io.h  speech_engine.h
include/sensevoice/include/: common.h
include/sensevoice/lib/cmake/ggml/: ggml-config.cmake  ggml-version.cmake
include/utils/: alsa_device.h  utils.h
launch/: audio_io.launch.py
src/: audio_example.cpp  hb_audio_io.cpp  speech_engine.cpp
src/utils/: alsa_device.cpp
wetts/include/: tts_api.h
